compiler/testData/asJava/lightClasses/compilationErrors/TwoOverrides.java
public final class TwoOverrides /* TwoOverrides*/ implements java.lang.Iterable<java.lang.String>, kotlin.collections.Iterable<java.lang.String>, kotlin.jvm.internal.markers.KMappedMarker {
  @null()
  public  TwoOverrides();//  .ctor()

  @org.jetbrains.annotations.Nullable()
  public java.lang.Void iterator();//  iterator()

  @org.jetbrains.annotations.Nullable()
  public java.lang.Void iterator();//  iterator()

}